Install ASDF from Homebrew
- Also create .zprofile for login shell

--- a/bootstrap/macos.yml
+++ b/bootstrap/macos.yml
@@ -140,6 +140,7 @@
         name:
           - adns
           - asciinema
+          - asdf
           - automake
           - avrdude
           - bat
