--- a/bootstrap/fedora.yml
+++ b/bootstrap/fedora.yml
@@ -47,6 +47,8 @@
           - java-latest-openjdk
           - java-latest-openjdk-devel
           - kitty
+          - libyaml
+          - libyaml-devel
           - luarocks
           - "@multimedia"
           - nasm
