Add ASDF plugins to bootstrap scripts

--- a/bootstrap/macos.yml
+++ b/bootstrap/macos.yml
@@ -220,7 +220,6 @@
           - texinfo
           - the_silver_searcher
           - tig
-          - tmuxinator
           - tokei
           - tree
           - unixodbc
@@ -254,3 +253,29 @@
     - name: Install Oh My Zsh
       ansible.builtin.shell: sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh)" "" --unattended --keep-zshrc --skip-chsh
       when: not oh_my_zsh_check.stat.exists
+
+    - name: Install ASDF Node.js
+      ansible.builtin.shell: |
+        asdf plugin add nodejs https://github.com/asdf-vm/asdf-nodejs.git
+        asdf install nodejs 18.19.1
+        asdf set -u nodejs 18.19.1
+
+    - name: Install ASDF Ruby
+      ansible.builtin.shell: |
+        asdf plugin add ruby https://github.com/asdf-vm/asdf-ruby.git
+        asdf install ruby 3.4.2
+        asdf set -u ruby 3.4.2
+
+    - name: Install ASDF Golang
+      ansible.builtin.shell: |
+        asdf plugin add golang https://github.com/asdf-community/asdf-golang.git
+        asdf set -u golang system
+
+    - name: Install ASDF Zig
+      ansible.builtin.shell: |
+        asdf plugin add zig https://github.com/asdf-community/asdf-zig.git
+        asdf set -u zig system
+
+    - name: Install ASDF Flutter
+      ansible.builtin.shell: asdf plugin add flutter https://github.com/asdf-community/asdf-flutter.git
+
