--- a/bootstrap/macos.yml
+++ b/bootstrap/macos.yml
@@ -218,6 +218,7 @@
           - texinfo
           - the_silver_searcher
           - tig
+          - tmux
           - tokei
           - tree
           - unixodbc
