--- a/bootstrap/macos.yml
+++ b/bootstrap/macos.yml
@@ -144,6 +144,7 @@
           - flyway
           - folderify
           - fzf
+          - gemini-cli
           - git
           - gnu-typist
           - go
