Add Rancher Desktop container management for macOS

--- a/bootstrap/macos.yml
+++ b/bootstrap/macos.yml
@@ -76,6 +76,7 @@
           - pritunl
           - qmk-toolbox
           - racket
+          - rancher
           - signal
           - slack
           - smlnj
