Add missing POSIX headers man pages

--- a/bootstrap/fedora.yml
+++ b/bootstrap/fedora.yml
@@ -51,6 +51,7 @@
           - libyaml
           - libyaml-devel
           - luarocks
+          - man-pages-posix
           - "@multimedia"
           - nasm
           - ncurses
