Fix image thumbnails not showing up in GNOME Files on Fedora Linux
https://itsfoss.com/image-thumbnails-missing-gnome/

--- a/bootstrap/fedora.yml
+++ b/bootstrap/fedora.yml
@@ -36,6 +36,7 @@
           - firefox
           - fzf
           - git
+          - glycin-thumbnailer
           - gnome-tweaks
           - go
           - go-task
